                     lscp_create_fxsend();
                     lscp_destroy_fxsend();
                     lscp_get_fxsends();
                     lscp_list_fxsends();
                     lscp_get_fxsend_info();
                     lscp_set_fxsend_audio_channel();
				   and for global volume:
                     lscp_get_volume();
                     lscp_set_volume();

0.5.1  2006-12-22  Added support for new (un)subscribable events:
                     LSCP_EVENT_AUDIO_OUTPUT_DEVICE_COUNT,
                     LSCP_EVENT_AUDIO_OUTPUT_DEVICE_INFO,
                     LSCP_EVENT_MIDI_INPUT_DEVICE_COUNT,
                     LSCP_EVENT_MIDI_INPUT_DEVICE_INFO,
                     LSCP_EVENT_MIDI_INSTRUMENT_MAP_COUNT,
                     LSCP_EVENT_MIDI_INSTRUMENT_MAP_INFO,
                     LSCP_EVENT_MIDI_INSTRUMENT_COUNT,
                     LSCP_EVENT_MIDI_INSTRUMENT_INFO.
 
                   Updated examples.

0.5.0  2006-12-17  MIDI instrument mapping, second round, according to
                   LSCP 1.2 draft document as of December 15, 2006.

                   New client interface functions:
                     lscp_set_channel_midi_map();
                     lscp_add_midi_instrument_map();
                     lscp_remove_midi_instrument_map();
                     lscp_get_midi_instrument_maps();
                     lscp_list_midi_instrument_maps();
                     lscp_get_midi_instrument_map_name();
                     lscp_set_midi_instrument_map_name();


0.4.2  2006-12-04  MIDI instrument mapping fixed, previously missing
                   the regular ON_DEMAND load mode.

                   Server error reporting is now effective; all server
                   numerical error and warning codes are added to 100,
                   thus giving a proper non-zero lscp_client_get_errno()
                   return value.

0.4.1  2006-11-28  Fixed the flush timeout operation to be issued only